update: Rearrange the space between letters for category name(TIL)

--- a/_posts/2020-05-08-mindset.md
+++ b/_posts/2020-05-08-mindset.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 개발자 취업 지망생의 마음가짐
-category: TIL(today I learned)
+category: TIL (Today I Learned)
 tags: [TIL (Today I Learned)]
 ---
 
@@ -10,7 +10,7 @@ tags: [TIL (Today I Learned)]
 
 ```
 Q. 수강하면서 아쉬운점이나, 어려운 부분은 없었는가?
-A. 단기간에 정말 개발자가 될 수 있을지에 대해 의문이 많이 들었다. 
+A. 단기간에 정말 개발자가 될 수 있을지에 대해 의문이 많이 들었다.
 제대로 하고 있는지, 맞게 하는 건지 알 수가 없어서 마인드 컨트롤이 힘들었다.
 ```
 
