--- a/_posts/2020-04-23-untitled-01.md
+++ b/_posts/2020-04-23-untitled-01.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 기본 내용은 매일 반복
-category: TIL(today I learned)
+category: TIL (Today I Learned)
 tags: [TIL (Today I Learned)]
 ---
 
