--- a/_posts/2020-04-30-untitled-02.md
+++ b/_posts/2020-04-30-untitled-02.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 드디어 Node.js를 시작하다
-category: TIL(today I learned)
+category: TIL (Today I Learned)
 tags: [TIL (Today I Learned)]
 ---
 
