modify: Sort out categories

--- a/_posts/2020-05-08-mindset.md
+++ b/_posts/2020-05-08-mindset.md
@@ -1,4 +1,4 @@
----
+<!-- ---
 layout: post
 title: 개발자 취업 지망생의 마음가짐
 category: TIL (Today I Learned)
@@ -17,4 +17,4 @@ A. 단기간에 정말 개발자가 될 수 있을지에 대해 의문이 많이
 외로이 혼자서 독학을 하는 사람이나, 여러 사람들과 함께 모여 코딩을 배우는 경우나 느끼는 불안함은 비슷한가보다..
 <br>
 
-**무엇인가에 의지하려는 관성을 밀어내고 스스로 단단해지려는 부단한 노력이 항상 필요하다.**
+**무엇인가에 의지하려는 관성을 밀어내고 스스로 단단해지려는 부단한 노력이 항상 필요하다.** -->
